--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "@tailwindcss/vite": "^4.1.13",
+    "framer-motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13"
